Actualizo imagenes y estilos

--- a/index.html
+++ b/index.html
@@ -90,49 +90,49 @@
       <img src="img/dyson-v15.jpg" alt="Dyson V15 Detect">
       <h4>Dyson V15 Detect</h4>
       <p>Aspiradora inalámbrica de alta gama con sensor láser para limpieza profunda.</p>
-      <a href="https://www.amazon.es/dp/B08ZJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      <a href="https://amzn.to/45X9G6V" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <div class="product">
       <span class="amazon-badge">Amazon</span>
       <img src="img/lg-oled.jpg" alt="LG OLED evo G3 65">
       <h4>LG OLED evo G3 65"</h4>
       <p>Televisor OLED 4K de 65 pulgadas, calidad de imagen profesional y Dolby Vision.</p>
-      <a href="https://www.amazon.es/dp/B0BSJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      <a href="https://amzn.to/4e3jcaQ" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <div class="product">
       <span class="amazon-badge">Amazon</span>
-      <img src="img/macbook-pro.jpg" alt="MacBook Pro 16 M3">
-      <h4>MacBook Pro 16” M3</h4>
-      <p>Portátil profesional de Apple con pantalla Liquid Retina XDR y chip M3 Pro.</p>
-      <a href="https://www.amazon.es/dp/B0CNJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      <img src="img/hp-spectre-x360.jpg" alt="HP Spectre x360 16">
+      <h4>HP Spectre x360 16</h4>
+      <p>Portátil convertible premium con pantalla táctil OLED 3K+, Intel Core i7 y diseño elegante.</p>
+      <a href="https://amzn.to/4jRz8OO" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <div class="product">
       <span class="amazon-badge">Amazon</span>
       <img src="img/garmin-fenix7.jpg" alt="Garmin Fenix 7">
       <h4>Garmin Fenix 7</h4>
       <p>Reloj multideporte premium con GPS, mapas y autonomía de hasta 18 días.</p>
-      <a href="https://www.amazon.es/dp/B09QJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      <a href="https://amzn.to/4mXrCER" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <div class="product">
       <span class="amazon-badge">Amazon</span>
-      <img src="img/bose-700.jpg" alt="Bose 700">
-      <h4>Bose 700</h4>
-      <p>Auriculares inalámbricos con cancelación de ruido y sonido de alta fidelidad.</p>
-      <a href="https://www.amazon.es/dp/B07QJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      <img src="img/sony-ult.jpg" alt="Bose 700">
+      <h4>Sony ULT Wear</h4>
+      <p>Sony ULT Wear, Auriculares inalámbricos Bluetooth con ULT Power Sound, hasta 30 Horas de autonomía de la batería.</p>
+      <a href="https://amzn.to/4n2Mjz3" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <div class="product">
-      <span class="amazon-badge">Amazon</span>
-      <img src="img/robot-cocina.jpg" alt="Thermomix TM6">
-      <h4>Thermomix TM6</h4>
-      <p>Robot de cocina multifunción, el más avanzado del mercado.</p>
-      <a href="https://www.amazon.es/dp/B07QJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+     <span class="amazon-badge">Amazon</span>
+     <img src="img/cecotec-mambo-8590.jpg" alt="Cecotec Mambo 8590">
+     <h4>Cecotec Mambo 8590</h4>
+     <p>Robot de cocina multifunción con 30 funciones, báscula integrada y jarra de acero inoxidable.</p>
+     <a href="https://amzn.to/43IxOsz" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <div class="product">
-      <span class="amazon-badge">Amazon</span>
-      <img src="img/epson-ecotank.jpg" alt="Epson EcoTank ET-8550">
-      <h4>Epson EcoTank ET-8550</h4>
-      <p>Impresora fotográfica A3+ de alta calidad y bajo coste por página.</p>
-      <a href="https://www.amazon.es/dp/B08QJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+     <span class="amazon-badge">Amazon</span>
+     <img src="img/hp-deskjet-2720e.jpg" alt="HP DeskJet 2720e">
+     <h4>HP DeskJet 2720e</h4>
+     <p>Impresora multifunción compacta, ideal para casa, con WiFi, escáner y copia. Muy económica y fiable.</p>
+     <a href="https://www.amazon.es/dp/B08XYN6WZ3/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <!-- Puedes seguir añadiendo más productos premium según tu público -->
   <div class="product">
