Nuevos productos agregados

--- a/index.html
+++ b/index.html
@@ -132,141 +132,85 @@
      <img src="img/hp-deskjet-2720e.jpg" alt="HP DeskJet 2720e">
      <h4>HP DeskJet 2720e</h4>
      <p>Impresora multifunción compacta, ideal para casa, con WiFi, escáner y copia. Muy económica y fiable.</p>
-     <a href="https://www.amazon.es/dp/B08XYN6WZ3/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+     <a href="https://amzn.to/3Zs7qAL" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
     </div>
     <!-- Puedes seguir añadiendo más productos premium según tu público -->
   <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/samsung-qled.jpg" alt="Samsung QLED 75 QN90C">
-  <h4>Samsung QLED 75" QN90C</h4>
-  <p>Televisor QLED 4K de 75 pulgadas, Mini LED, HDR2000 y Smart TV.</p>
-  <a href="https://www.amazon.es/dp/B0BZQJQ1Q2/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <img src="img/samsung-qled.jpg" alt="Samsung QLED 75 QN85D">
+  <h4>Samsung QLED 75" QN85D</h4>
+  <p>Televisor QLED 4K de 75 pulgadas, Mini LED, NQ4 AI Gen2 y Smart TV.</p>
+  <a href="https://amzn.to/3ZYuN56" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/alienware-m18.jpg" alt="Alienware m18 R2">
-  <h4>Alienware m18 R2</h4>
-  <p>Portátil gaming con Intel i9, RTX 4090 y pantalla QHD+ 18".</p>
-  <a href="https://www.amazon.es/dp/B0CQJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <img src="img/xiaomi-redmi-note-13.jpg" alt="Xiaomi Redmi Note 13">
+  <h4>Xiaomi Redmi Note 13</h4>
+  <p>Smartphone con pantalla AMOLED 120Hz, cámara de 108MP y gran batería a precio asequible.</p>
+  <a href="https://amzn.to/43V1KAE" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/sony-x95l.jpg" alt="Sony Bravia XR X95L 85">
-  <h4>Sony Bravia XR X95L 85"</h4>
-  <p>Televisor Mini LED 4K de 85", Google TV y Dolby Vision.</p>
-  <a href="https://www.amazon.es/dp/B0CSJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <img src="img/echo-dot-5.jpg" alt="Echo Dot 5ª Gen">
+  <h4>Echo Dot (5ª Gen)</h4>
+  <p>Altavoz inteligente con Alexa, sonido mejorado y control por voz para tu hogar.</p>
+  <a href="https://www.amazon.es/dp/B09B8V8L8V/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/lenovo-legion9.jpg" alt="Lenovo Legion 9i">
-  <h4>Lenovo Legion 9i</h4>
-  <p>Portátil gaming con Intel i9, RTX 4090, 32GB RAM y pantalla Mini LED.</p>
-  <a href="https://www.amazon.es/dp/B0CQJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/nikon-z8.jpg" alt="Nikon Z8">
-  <h4>Nikon Z8</h4>
-  <p>Cámara mirrorless profesional de 45.7 MP, vídeo 8K y enfoque ultrarrápido.</p>
-  <a href="https://www.amazon.es/dp/B0C2JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/rolex-daytona.jpg" alt="Rolex Daytona">
-  <h4>Rolex Daytona</h4>
-  <p>Reloj de lujo suizo, icónico en el mundo de la relojería.</p>
-  <a href="https://www.amazon.es/dp/B07QJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/segway-gt2.jpg" alt="Segway GT2">
-  <h4>Segway GT2</h4>
-  <p>Patinete eléctrico premium, velocidad máxima 70 km/h y autonomía de 90 km.</p>
-  <a href="https://www.amazon.es/dp/B0C3JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/sonos-arc.jpg" alt="Sonos Arc">
-  <h4>Sonos Arc</h4>
-  <p>Barra de sonido premium con Dolby Atmos y control por voz.</p>
-  <a href="https://www.amazon.es/dp/B089JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/dji-mavic3pro.jpg" alt="DJI Mavic 3 Pro">
-  <h4>DJI Mavic 3 Pro</h4>
-  <p>Drone profesional con triple cámara Hasselblad y vídeo 5.1K.</p>
-  <a href="https://www.amazon.es/dp/B0C4JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/roomba-s9plus.jpg" alt="Roomba S9+">
-  <h4>Roomba S9+</h4>
-  <p>Robot aspirador de alta gama con vaciado automático y mapeo inteligente.</p>
-  <a href="https://www.amazon.es/dp/B07QJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/philips-ambilight.jpg" alt="Philips Ambilight OLED 77">
-  <h4>Philips Ambilight OLED 77"</h4>
-  <p>Televisor OLED 4K de 77" con Ambilight y Android TV.</p>
-  <a href="https://www.amazon.es/dp/B0C5JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/acer-predator-x45.jpg" alt="Acer Predator X45">
-  <h4>Acer Predator X45</h4>
-  <p>Monitor gaming OLED curvo de 45", 240Hz y 0.03ms de respuesta.</p>
-  <a href="https://www.amazon.es/dp/B0C6JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/bowers-wilkins-zeppelin.jpg" alt="Bowers & Wilkins Zeppelin">
-  <h4>Bowers & Wilkins Zeppelin</h4>
-  <p>Altavoz inalámbrico de alta fidelidad, diseño icónico y sonido premium.</p>
-  <a href="https://www.amazon.es/dp/B09JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/theragun-pro.jpg" alt="Theragun PRO">
-  <h4>Theragun PRO</h4>
-  <p>Pistola de masaje profesional para recuperación muscular.</p>
-  <a href="https://www.amazon.es/dp/B08JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
-</div>
-<div class="product">
-  <span class="amazon-badge">Amazon</span>
-  <img src="img/epic-voyager.jpg" alt="Epic Voyager 4K Pro">
-  <h4>Epic Voyager 4K Pro</h4>
-  <p>Proyector láser 4K UHD de alta gama para cine en casa.</p>
+  <img src="img/xiaomi-mi-band-8.jpg" alt="Xiaomi Mi Band 8">
+  <h4>Xiaomi Mi Band 8</h4>
+  <p>Pulsera de actividad con pantalla AMOLED, monitor de salud y batería de larga duración.</p>
   <a href="https://www.amazon.es/dp/B0C7JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/whirlpool-w11.jpg" alt="Whirlpool W11">
-  <h4>Whirlpool W11</h4>
-  <p>Horno multifunción pirolítico con conectividad WiFi y vapor.</p>
-  <a href="https://www.amazon.es/dp/B0C8JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <img src="img/soundcore-life-q30.jpg" alt="Soundcore Life Q30">
+  <h4>Soundcore Life Q30</h4>
+  <p>Auriculares inalámbricos con cancelación de ruido activa y hasta 40h de batería.</p>
+  <a href="https://www.amazon.es/dp/B08HMWZBXC/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/segway-s-max.jpg" alt="Segway S-Max">
-  <h4>Segway S-Max</h4>
-  <p>Transportador personal eléctrico premium, hasta 38 km/h.</p>
-  <a href="https://www.amazon.es/dp/B0C9JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <img src="img/amazfit-bip-5.jpg" alt="Amazfit Bip 5">
+  <h4>Amazfit Bip 5</h4>
+  <p>Smartwatch con GPS, monitor de salud, pantalla grande y gran autonomía.</p>
+  <a href="https://www.amazon.es/dp/B0CCQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/sony-vpl-xw5000.jpg" alt="Sony VPL-XW5000ES">
-  <h4>Sony VPL-XW5000ES</h4>
-  <p>Proyector láser 4K HDR para cine en casa de alta gama.</p>
-  <a href="https://www.amazon.es/dp/B0C0JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <img src="img/philips-hue-white.jpg" alt="Philips Hue White">
+  <h4>Philips Hue White</h4>
+  <p>Bombilla LED inteligente compatible con Alexa y Google Home, control desde el móvil.</p>
+  <a href="https://www.amazon.es/dp/B0167H31CI/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
-  <img src="img/rolex-gmt.jpg" alt="Rolex GMT-Master II">
-  <h4>Rolex GMT-Master II</h4>
-  <p>Reloj de lujo con doble huso horario, referencia mundial en relojería.</p>
-  <a href="https://www.amazon.es/dp/B07QJQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <img src="img/realme-buds-wireless-3.jpg" alt="realme Buds Wireless 3">
+  <h4>realme Buds Wireless 3</h4>
+  <p>Auriculares Bluetooth con cancelación de ruido, ligeros y económicos.</p>
+  <a href="https://www.amazon.es/dp/B0C6JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+<div class="product">
+  <span class="amazon-badge">Amazon</span>
+  <img src="img/cecotec-conga-2290.jpg" alt="Cecotec Conga 2290">
+  <h4>Cecotec Conga 2290</h4>
+  <p>Robot aspirador con mapeo, fregado y control por app, muy popular y asequible.</p>
+  <a href="https://www.amazon.es/dp/B08XYN6WZ3/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+<div class="product">
+  <span class="amazon-badge">Amazon</span>
+  <img src="img/hp-deskjet-2720e.jpg" alt="HP DeskJet 2720e">
+  <h4>HP DeskJet 2720e</h4>
+  <p>Impresora multifunción compacta, ideal para casa, con WiFi, escáner y copia.</p>
+  <a href="https://www.amazon.es/dp/B08XYN6WZ3/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+</div>
+<div class="product">
+  <span class="amazon-badge">Amazon</span>
+  <img src="img/mi-tv-stick.jpg" alt="Xiaomi Mi TV Stick 4K">
+  <h4>Xiaomi Mi TV Stick 4K</h4>
+  <p>Convierte tu tele en Smart TV con Android TV, compatible con Netflix y Prime Video.</p>
+  <a href="https://www.amazon.es/dp/B09G9FPGTN/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 </section>
 
