Nuevos productos agregados

--- a/index.html
+++ b/index.html
@@ -151,56 +151,56 @@
   <img src="img/echo-dot-5.jpg" alt="Echo Dot 5ª Gen">
   <h4>Echo Dot (5ª Gen)</h4>
   <p>Altavoz inteligente con Alexa, sonido mejorado y control por voz para tu hogar.</p>
-  <a href="https://www.amazon.es/dp/B09B8V8L8V/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/3I413NZ" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
   <img src="img/xiaomi-mi-band-8.jpg" alt="Xiaomi Mi Band 8">
   <h4>Xiaomi Mi Band 8</h4>
   <p>Pulsera de actividad con pantalla AMOLED, monitor de salud y batería de larga duración.</p>
-  <a href="https://www.amazon.es/dp/B0C7JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/3HPnqqs" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
   <img src="img/soundcore-life-q30.jpg" alt="Soundcore Life Q30">
   <h4>Soundcore Life Q30</h4>
   <p>Auriculares inalámbricos con cancelación de ruido activa y hasta 40h de batería.</p>
-  <a href="https://www.amazon.es/dp/B08HMWZBXC/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/4lasBzx" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
   <img src="img/amazfit-bip-5.jpg" alt="Amazfit Bip 5">
   <h4>Amazfit Bip 5</h4>
   <p>Smartwatch con GPS, monitor de salud, pantalla grande y gran autonomía.</p>
-  <a href="https://www.amazon.es/dp/B0CCQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/4ea1LVS" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
   <img src="img/philips-hue-white.jpg" alt="Philips Hue White">
   <h4>Philips Hue White</h4>
   <p>Bombilla LED inteligente compatible con Alexa y Google Home, control desde el móvil.</p>
-  <a href="https://www.amazon.es/dp/B0167H31CI/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/44nq0wz" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
   <img src="img/realme-buds-wireless-3.jpg" alt="realme Buds Wireless 3">
   <h4>realme Buds Wireless 3</h4>
   <p>Auriculares Bluetooth con cancelación de ruido, ligeros y económicos.</p>
-  <a href="https://www.amazon.es/dp/B0C6JQ1Q2Q/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/3I1Ygou" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
   <img src="img/cecotec-conga-2290.jpg" alt="Cecotec Conga 2290">
   <h4>Cecotec Conga 2290</h4>
   <p>Robot aspirador con mapeo, fregado y control por app, muy popular y asequible.</p>
-  <a href="https://www.amazon.es/dp/B08XYN6WZ3/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/4liifxU" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 <div class="product">
   <span class="amazon-badge">Amazon</span>
   <img src="img/mi-tv-stick.jpg" alt="Xiaomi Mi TV Stick 4K">
   <h4>Xiaomi Mi TV Stick 4K</h4>
   <p>Convierte tu tele en Smart TV con Android TV, compatible con Netflix y Prime Video.</p>
-  <a href="https://www.amazon.es/dp/B09G9FPGTN/?tag=articulosreba-21" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+  <a href="https://amzn.to/4kNSzZX" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 </section>
 
