--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
   <footer>
     <img src="img/amazon-logo.png" alt="Amazon logo" class="footer-logo">
-    <p>Este sitio participa en el programa de afiliados de Amazon. Como afiliado, gano comisiones por compras adscritas que califican.</p>
+    <p>Este sitio participa en el programa de afiliados de Amazon. Gracias por el apoyo <3</p>
     <p>&copy; 2025 SMAVM</p>
   </footer>
 </body>
