--- a/index.html
+++ b/index.html
@@ -423,21 +423,23 @@
         <img src="img/cargador-solar.jpg" alt="Cargador Solar Power Bank 27000mah - Riapow 22,5W">
         <h4>Cargador Solar Power Bank</h4>
         <p>Power bank solar 27000mAh con carga rápida, inalámbrica, cables integrados y linterna, portátil para móvil y tablet.</p>
-        <a href="https://amzn.to/4nbcGTn" target="_blank" rel="noopener norefer>
+        <a href="https://amzn.to/4nbcGTn" target="_blank" rel="noopener norefer">Ver en Amazon</a>
       </div>
       <div class="product">
         <span class="amazon-badge">Amazon</span>
         <img src="img/bateria-coche.jpg" alt="Arrancadores de Bateria de Coche Portátil -" >
         <h4>Arrancadores de Bateria de Coche Portátil</h4>
         <p>Arrancador de coches ACEZUK 6000A, portátil para baterías de hasta 8L diésel o 10L gasolina, con pinzas inteligentes, pantalla, luz LED y puerto de carga rápida QC3.0.</p>
-        <a href="https://amzn.to/3SY8tov" target="_blank" rel="noopener norefer>
+        <a href="https://amzn.to/3SY8tov" target="_blank" rel="noopener norefer">Ver en Amazon</a>
+
       </div>
        <div class="product">
         <span class="amazon-badge">Amazon</span>
         <img src="img/encendedor.jpg" alt="Encendedor eléctrico de arco eléctrico, resistente al viento, sin llama, recargable por USB">
         <h4>Encendedor eléctrico de arco eléctrico, resistente al viento, sin llama, recargable por USB</h4>
         <p>SUPRUS Encendedor eléctrico de arco eléctrico, resistente al viento, sin llama, recargable por USB, con luz LED para vela, camping, barbacoa, cocina</p>
-        <a href="https://amzn.to/3ZBEbLV" target="_blank" rel="noopener norefer>
+        <a href="https://amzn.to/3ZBEbLV" target="_blank" rel="noopener norefer">Ver en Amazon</a>
+
       </div>
     </div>
   </section>
