--- a/index.html
+++ b/index.html
@@ -314,6 +314,20 @@
         <p>Portátil convertible premium con pantalla táctil OLED 3K+, Intel Core i7 y diseño elegante.</p>
         <a href="https://amzn.to/4jRz8OO" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
       </div>
+      <div class="product">
+        <span class="amazon-badge">Amazon</span>
+        <img src="img/logitech-g305.jpg" alt="Logitech G305 LIGHTSPEED">
+        <h4>Logitech G305 LIGHTSPEED Ratón Gaming Inalámbrico</h4>
+        <p>Ratón Gaming Inalámbrico, Captor HERO 12K, 12,000 DPI, Ultra-ligero, Batería de 250h, 6 Botones Programables, Memoría Integrada, PC/Mac</p>
+        <a href="https://amzn.to/3GuvDA7" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      </div>
+      <div class="product">
+        <span class="amazon-badge">Amazon</span>
+        <img src="img/logitech-g-pro-x.jpg" alt="Logitech G Pro X Superlight 2 SE">
+        <h4>Logitech G Pro X Superlight 2 SE</h4>
+        <p>Ratón inalámbrico para Gaming, 60 g, 5 Botones programables, Sensor de 44 000 dpi, Velocidad máxima >888 IPS</p>
+        <a href="https://amzn.to/4kjFy9n" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      </div>
     </div>
   </section>
   <section id="hogar" class="section category-section">
