--- a/index.html
+++ b/index.html
@@ -309,6 +309,13 @@
       </div>
       <div class="product">
         <span class="amazon-badge">Amazon</span>
+        <img src="img/portatil-GIGABYTE.jpg" alt="GIGABYTE Portátil Gaming G6">
+        <h4>GIGABYTE Portátil Gaming G6 KF - 16,0 Pulgadas</h4>
+        <p>Portátil Gaming G6 KF-16,0 Pulgadas, 165Hz FHD, Intel Core i7-13700H, RTX 4060 GPU, 16GB DDR5 4800MHz, 512G SSD, FreeDOS, G6 KF-73ES893KD.</p>
+        <a href="https://amzn.to/4nCFiFl" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      </div>
+      <div class="product">
+        <span class="amazon-badge">Amazon</span>
         <img src="img/hp-spectre-x360.jpg" alt="HP Spectre x360 16">
         <h4>HP Spectre x360 16</h4>
         <p>Portátil convertible premium con pantalla táctil OLED 3K+, Intel Core i7 y diseño elegante.</p>
@@ -318,15 +325,22 @@
         <span class="amazon-badge">Amazon</span>
         <img src="img/logitech-g305.jpg" alt="Logitech G305 LIGHTSPEED">
         <h4>Logitech G305 LIGHTSPEED Ratón Gaming Inalámbrico</h4>
-        <p>Ratón Gaming Inalámbrico, Captor HERO 12K, 12,000 DPI, Ultra-ligero, Batería de 250h, 6 Botones Programables, Memoría Integrada, PC/Mac</p>
+        <p>Ratón Gaming Inalámbrico, Captor HERO 12K, 12,000 DPI, Ultra-ligero, Batería de 250h, 6 Botones Programables, Memoría Integrada, PC/Mac.</p>
         <a href="https://amzn.to/3GuvDA7" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
       </div>
       <div class="product">
         <span class="amazon-badge">Amazon</span>
         <img src="img/logitech-g-pro-x.jpg" alt="Logitech G Pro X Superlight 2 SE">
         <h4>Logitech G Pro X Superlight 2 SE</h4>
-        <p>Ratón inalámbrico para Gaming, 60 g, 5 Botones programables, Sensor de 44 000 dpi, Velocidad máxima >888 IPS</p>
+        <p>Ratón inalámbrico para Gaming, 60 g, 5 Botones programables, Sensor de 44 000 dpi, Velocidad máxima >888 IPS.</p>
         <a href="https://amzn.to/4kjFy9n" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      </div>
+      <div class="product">
+        <span class="amazon-badge">Amazon</span>
+        <img src="img/logitech-G502-HERO.jpg" alt="Logitech G502 HERO">
+        <h4>Logitech G502 HERO</h4>
+        <p>Ratón Gaming con Cable Alto Rendimiento, Captor HERO 25K, 25,600 DPI, RGB, Peso Personalizable, 11 Botones Programables.</p>
+        <a href="https://amzn.to/3U3FIHa" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
       </div>
     </div>
   </section>
