--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@
         <p>Portátil Gaming G6 KF-16,0 Pulgadas, 165Hz FHD, Intel Core i7-13700H, RTX 4060 GPU, 16GB DDR5 4800MHz, 512G SSD, FreeDOS, G6 KF-73ES893KD.</p>
         <a href="https://amzn.to/4nCFiFl" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
       </div>
+     <div class="product">
+        <span class="amazon-badge">Amazon</span>
+        <img src="img/msi-katana.jpg" alt="MSI Katana 15 B13VFK-1855XES">
+        <h4>MSI Katana 15 B13VFK-1855XES Ordenador Portátil Gaming</h4>
+        <p>Ordenador Portátil Gaming 15.6" FHD 144Hz (Intel Core i7-13700H, 16GB RAM, 512GB SSD, RTX 4060-8GB, Sin Sistema Operativo) Negro, Teclado QWERTY Español.</p>
+        <a href="https://amzn.to/3Gy7Ij6" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      </div>
       <div class="product">
         <span class="amazon-badge">Amazon</span>
         <img src="img/hp-spectre-x360.jpg" alt="HP Spectre x360 16">
