--- a/index.html
+++ b/index.html
@@ -321,6 +321,13 @@
         <p>Ordenador Portátil Gaming 15.6" FHD 144Hz (Intel Core i7-13700H, 16GB RAM, 512GB SSD, RTX 4060-8GB, Sin Sistema Operativo) Negro, Teclado QWERTY Español.</p>
         <a href="https://amzn.to/3Gy7Ij6" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
       </div>
+       <div class="product">
+        <span class="amazon-badge">Amazon</span>
+        <img src="img/MSI Creator Z17 A12UGST-035ES.jpg" alt="MSI Creator Z17 A12UGST-035ES">
+        <h4>MSI Creator Z17 A12UGST-035ES portatil </h4>
+        <p>Ordenador portátil 17" QHD+ (Intel Core i9-12900H, 32GB RAM, 1TB SSD, GeForce RTX 3070Ti-8GB, Windows 11 Home Advanced) Lunar Gray, Per-Key RGB Keyboard.</p>
+        <a href="https://amzn.to/46u0WFG" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+      </div>
       <div class="product">
         <span class="amazon-badge">Amazon</span>
         <img src="img/hp-spectre-x360.jpg" alt="HP Spectre x360 16">
