--- a/index.html
+++ b/index.html
@@ -478,8 +478,15 @@
         <span class="amazon-badge">Amazon</span>
         <img src="img/encendedor.jpg" alt="Encendedor eléctrico de arco eléctrico, resistente al viento, sin llama, recargable por USB">
         <h4>Encendedor eléctrico de arco eléctrico, resistente al viento, sin llama, recargable por USB</h4>
-        <p>SUPRUS Encendedor eléctrico de arco eléctrico, resistente al viento, sin llama, recargable por USB, con luz LED para vela, camping, barbacoa, cocina</p>
+        <p>SUPRUS Encendedor eléctrico de arco eléctrico, resistente al viento, sin llama, recargable por USB, con luz LED para vela, camping, barbacoa, cocina.</p>
         <a href="https://amzn.to/3ZBEbLV" target="_blank" rel="noopener norefer">Ver en Amazon</a>
+      </div>
+      <div class="product">
+        <span class="amazon-badge">Amazon</span>
+        <img src="img/Cecotec_Climatizador_Evaporativo.jpg" alt="Cecotec Climatizador Evaporativo">
+        <h4>Cecotec Climatizador Evaporativo</h4>
+        <p>Climatizador Evaporativo EnergySilence 3500 Cool Compact. 65 W, Depósito 3,5 L, 3 Velocidades, Oscilación de 70º, Ruedas multidireccionales, Incluye 2 Enfriadores.</p>
+        <a href="https://amzn.to/3Gx3TLa" target="_blank" rel="noopener norefer">Ver en Amazon</a>
       </div>
     </div>
   </section>
