--- a/index.html
+++ b/index.html
@@ -488,6 +488,13 @@
         <p>Climatizador Evaporativo EnergySilence 3500 Cool Compact. 65 W, Depósito 3,5 L, 3 Velocidades, Oscilación de 70º, Ruedas multidireccionales, Incluye 2 Enfriadores.</p>
         <a href="https://amzn.to/3Gx3TLa" target="_blank" rel="noopener norefer">Ver en Amazon</a>
       </div>
+      <div class="product">
+        <span class="amazon-badge">Amazon</span>
+        <img src="img/Orbegozo-ventilador.jpg" alt="Ventilador Orbegozo de pie, 50 W">
+        <h4>Ventilador de pie, 50 W, 3 velocidades de ventilación</h4>
+        <p>Orbegozo SF 0148, Ventilador de pie, 50 W, 3 velocidades de ventilación, oscilante, altura regulable, silencioso, rejilla de seguridad, tamaño de aspas 40 cm, color negro.</p>
+        <a href="https://amzn.to/4lguUBJ" target="_blank" rel="noopener norefer">Ver en Amazon</a>
+      </div>
     </div>
   </section>
 
